--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background: #3ed846
+  background: #3ed846;
 }
 
   
@@ -9,5 +9,5 @@ p{
     }
  
     em strong{
-      color:red     
+      color:red;     
     }
